Adicionado correções e melhoria na figura3

--- a/references.bib
+++ b/references.bib
@@ -270,7 +270,7 @@
 	note 		= "Acessado em 10/03/2018. Disponível em: http:/http://emile.ifba.edu.br/"
 }
 
-@book{Taylor:2009:SAF:1538494,
+@book{medvidovic,
 	title 		= {Software Architecture: Foundations, Theory, and Practice},
 	author 		= {Taylor, R. N. and Medvidovic, N. and Dashofy, E. M.},
 	year 		= {2009},
