Correções final do artigo

--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -1,7 +1,7 @@
 %<Fazer um merge das duas últimas sessẽos para uma única simplificadamente.>%
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
-\section{ARQUITETURAS E TECNOLOGIAS PARA SISTEMAS MOBILE}
+\section{ARQUITETURAS E TECNOLOGIAS \\PARA SISTEMAS MOBILE}
 Esta Seção, apresenta as principais referências que contextualizam este trabalho. A Subseção 2.1 apresenta o Qt e o QML. A Subseção 2.2 descreve sobre Arquitetura de Software. A Subseção 2.3 apresenta Arquitetura de Referência. A Subseção 2.4 resume Sistemas de Informação. A Subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A Subseção 2.6 detalha Projetos de Aplicativos Móveis. A Subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a Subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTful}, o \textit{Push Notification} e o JSON.
 
 
