Adicionado correções e atualizações para entrega final

--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -6,7 +6,7 @@ Esta Seção, apresenta as principais referências que contextualizam este traba
 
 
 \subsection{O Qt e o QML} %2.1
-O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{qt_io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{qt_software}.\par
+O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário agradável em todos os dispositivos \cite{qt_io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{qt_software}.\par
 
 O Qt possui um amplo apoio à internacionalização e outros recursos, tais como o acesso a um banco de dados \textit{SQL}, \textit{parsing} de XML, \textit{parsing} de JSON, gerenciamento de \textit{threads} e suporte a rede \cite{qt_gui_toolkit}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para construir interface gráfica, o QML. O QML é uma especificação de interface de usuário e linguagem de programação que permite a desenvolvedores e designers criar aplicativos de alta performance, fluidamente animados e visualmente atraentes. O QML oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{doc_qt_io}.
 
@@ -28,7 +28,7 @@ Os softwares estão em constante evolução e sofrem mudanças periodicamente, q
 		\item Suporte a reuso de componentes e maior controle dos mesmos.
 \end{itemize}
 
-O desenvolvimento de software envolve muitas partes (e.g., levantamento de requisitos, modelagem, implementação, testes, refatoração e etc.). O objetivo de um software é o que motiva a sua construção, e o que fomenta todas as partes que envolve o seu desenvolvimento é o problema que ele tenta solucionar no mundo real e parte do mérito de uma boa solução é devido ao uso de uma boa arquitetura.\par
+O desenvolvimento de software envolve muitas partes (ex: levantamento de requisitos, modelagem, implementação, testes, refatoração e etc.). O objetivo de um software é o que motiva a sua construção, e o que fomenta todas as partes que envolve o seu desenvolvimento é o problema que ele tenta solucionar no mundo real e parte do mérito de uma boa solução é devido ao uso de uma boa arquitetura.\par
 
 Neste trabalho, arquitetura de software pode ser compreendida nas decisões de implementação, nas restrições impostas pelo uso dos recursos disponibilizados e dos componentes reusáveis, além dos estilos arquiteturais provenientes das APIs utilizadas, dentre elas, o \textit{Event-Based}, mecanismo de comunicação baseado em eventos provido pelo Qt. Outro aspecto arquitetural deste trabalho é um estilo de desenvolvimento orientado a plugins. Os plugins devem representar os componentes específicos e as funcionalidades de cada projeto baseado nesta arquitetura, eles são independentes entre si e proporcionam baixo acoplamento entre as funcionalidades do sistema.
 
@@ -81,7 +81,7 @@ A camada de aplicação corresponde ao processamento de ações e eventos proven
 A camada de \textit{middleware} intercala entre a camada de aplicação com a camada de \textit{backend}. O objetivo dessa camada é fornecer de forma abstrata e genérica um meio de comunicação entre o modelo de dados da aplicação com a camada de \textit{backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Ela é também responsável por interagir com o meio de comunicação disponível no dispositivo abstraindo para a camada de aplicação qual foi a interface de hardware utilizada. Um exemplo de objeto que trabalha nessa camada é o \textit{RequestHttp} disponibilizado nesta arquitetura, ele é resposável por realizar requisições HTTP ao \textit{web service} de forma assíncrona, notificando o objeto da camada de aplicação quando a resposta for obtida.
 
 \subsubsection{Camada de Backend}
-A camada \textit{backend} consiste de uma outra aplicação que responde pelas requisições do aplicativo através de uma rede via protocolo \textit{HTTP}. Esta camada está associada ao \textit{web service} ou serviço REST. O \textit{web service} pode atender a diferentes requisições e dispositivos, além de abstrair para o cliente, a lógica de negócios referente ao armazenamento e processamento dos dados entregues como resposta das requisições. A implementação desta camada pode ser desenvolvida sobre uma outra arquitetura, além de implementar regras de negócio inerentes ao seu funcionamento e portanto, não será detalhada neste trabalho.
+A camada \textit{backend} consiste de uma outra aplicação que responde pelas requisições do aplicativo através de uma rede via protocolo \textit{HTTP}. Esta camada está associada ao \textit{web service} ou serviço REST. O \textit{web service} pode atender a diferentes requisições e dispositivos, além de abstrair para o cliente, a lógica de negócios referente ao armazenamento e processamento dos dados entregues como resposta das requisições. A implementação desta camada pode ser desenvolvida sobre uma outra arquitetura, além de implementar regras de negócio inerentes ao seu funcionamento e portanto, não será discutida neste trabalho.
 
 
 %<definir o que é um aplicativo móvel: de onde surgiu esse termo? Porque aplicativo e não aplicação ou mesmo software?>%
@@ -101,7 +101,7 @@ Torna-se evidente que são muitos requisitos a serem considerados em um projeto 
 \subsection{Desenvolvimento Orientado a Componentes} %2.7
 O desenvolvimento de software orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
 
-O reuso de componentes é um recurso desta arquitetura, pois dispõe de onze componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos QML que suportam diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
+O reuso de componentes é um recurso desta arquitetura, pois dispõe de onze componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos QML que suportam diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reutilização, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
 
 
 %<introducao aos servicos web>%
