--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -42,7 +42,7 @@ Como consequência do aumento de dispositivos móveis, foram criados diferentes 
 
 O trabalho apresentado por Lisandro, relaciona-se com este artigo pelo fato de ambos terem desenvolvido APIs de utilizarem outros frameworks para o desenvolvimento do projeto. Enquanto que nesta arquitetura optou-se pelo Qt que utiliza a linguagem C++, o trabalho de Lisando utilizou o \textit{Xamarin} que utiliza a linguagem C\myhash. Alguns recursos Disponibilizados pelo Qt também estão disponíveis no \textit{Xamarin}. No entanto, o trabalho de Lisandro não focou em entregar um aplicativo genérico que pudesse ser reaproveitado para outros aplicativos, mais fez uso dos mesmos recursos disponibilizados nesta arquitetura.\par
 
-A tabela 1 apresenta um comparativo dos recursos disponibilizados na arquitetura descrita neste artigo com os trabalhos relacionados descritos anteriormente.
+A Tabela 1 apresenta um comparativo dos recursos disponibilizados na arquitetura descrita neste artigo com os trabalhos relacionados descritos anteriormente.
 
 \begin{table*}[t]
 	\centering
