--- a/sections/6-conclusao.tex
+++ b/sections/6-conclusao.tex
@@ -4,7 +4,7 @@
 %	\item reapresentar os resultados, conclusões...
 %\end{enumerate}
 % Aqui será apresentado as conclusões obtidos em todo o trabalho, sejam elas positivas ou negativas.
-Este artigo apresentou o projeto, implementação e documentação de uma arquitetura de software baseado em plugins para o desenvolvimento de sistemas de informação mobile. Destacou-se os recursos de baixo acoplamento entre objetos e facilidade de implementar features para comunicação com serviços \textit{RESTful}. A arquitetura destaca-se rica em recursos para operações básicas como acesso a rede, persistência de dados e notificações ao usuário tanto via push como local, através de APIs de alto nível. É possível ainda desenvolver objetos de UI usando componentes de alto nível através do QML.\par
+Este trabalho apresentou o projeto, implementação e documentação de uma arquitetura de software baseado em plugins para o desenvolvimento de sistemas de informação mobile. Destacou-se os recursos de baixo acoplamento entre objetos e facilidade de implementar features para comunicação com serviços \textit{RESTful}. A arquitetura destaca-se rica em recursos para operações básicas como acesso a rede, persistência de dados e notificações ao usuário tanto via push como local, através de APIs de alto nível. É possível ainda desenvolver objetos de UI usando componentes de alto nível através do QML.\par
 
 Também foi realizado uma avaliação da arquitetura através do desenvolvimento de um aplicativo em duas versões, uma com e outra sem a arquitetura com o objetivo de analisar as vantagens e os benefícios de utilizar o framework proposto neste trabalho. Através da avaliação, concluiu-se que a arquitetura carece de depuração facilitada e melhorias na API de acesso a rede, além de uma documentação para cada uma das features disponibilizadas.\par
 
