--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,8 @@
 \usepackage{upquote}
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
+\usepackage{scalerel}
+\newcommand\myhash{$^{\scalerel*{\#}{ig}}$}
 
 % corrige urls que não quebram de linha
 % \def\UrlBreaks{\do\/\do-\/\do_}
@@ -47,7 +49,7 @@
 \lstdefinelanguage{qml} {
 	morekeywords={Item, QtQuick, (property), Component, Observer, objectName, onUpdated, event, Components, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError, Database, id, jsonColumns, tableName, pkColumn, onItemLoaded, text, Label, Image, Column, spacing, hasListView, absPath, title, toolBarState, onRequestFinished, console, Button, enabled, onClicked, authorizationUser, authorizationPass},
 	keywordstyle=\color{red},
-	showstringspaces=true,
+	showstringspaces=false,
 	basicstyle=\small,
 	morestring=[b]",
 	commentstyle=\color{blue},
@@ -68,8 +70,8 @@
 }
 
 
-% adiciona o prefixo dos exemplos de código QML para "Algoritmo"
-\renewcommand{\lstlistingname}{Algoritmo}
+% adiciona o prefixo dos exemplos de código QML para "Exemplo"
+\renewcommand{\lstlistingname}{Exemplo}
 \graphicspath{{images/}}
 \hyphenation{mate-mática recu-perar}
 
@@ -78,9 +80,6 @@
 \makeatletter
 \def\@copyrightspace{\relax}
 \makeatother
-
-\usepackage{scalerel}
-\newcommand\myhash{$^{\scalerel*{\#}{ig}}$}
 
 \makeatletter
 \def\fnum@figure{Figura \thefigure}
