Atualizado versão do pdf e adicionado metadados no pdf via latex

--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,15 @@
 \usepackage{scalerel}
 \newcommand\myhash{$^{\scalerel*{\#}{ig}}$}
 
+\pdfinfo{
+	/Author (Enoque Joseneas J. Dos Santos)
+	/Title  (Uma Arquitetura de Referência Baseada em Plugins para Sistemas de Informação Mobile)
+	/CreationDate (D:20180604)
+	/Subject (Trabalho de Conclusão de Curso; ADS IFBA; Salvador-BA-Brazil)
+	/Keywords (Aplicativos Móveis; Arquitetura de Software; Qt; Sistemas de Informação.)
+	/PDFCreator (pdflatex, TexStudio, ArchLinux)
+}
+
 % corrige urls que não quebram de linha
 % \def\UrlBreaks{\do\/\do-\/\do_}
 
